<resources>
    <string name="app_name">QuickPointCalc</string>
    <string name="cars">Vaunut</string>
    <string name="point">Pisteet</string>
    <string name="zero">0</string>
    <string name="reset">Aloita alusta</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="eight">8</string>


</resources>